<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="title_movie">Movie</string>
    <string name="title_tv">TV Show</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_title">Title</string>
    <string name="txt_rating">00</string>
    <string name="lorem">lorem ipsum dolor sit amet</string>
    <string name="txt_release">Release Date</string>
    <string name="txt_runtime">Runtime</string>
    <string name="txt_genre">Genres</string>
    <string name="txt_overview">Overview</string>
    <string name="description_poster">Poster Image</string>
    <string name="title_network">Networks</string>
    <string name="data_release">January 31, 1900</string>
    <string name="data_runtime">1h 1m</string>
    <string name="data_network">Netflix</string>
    <string name="data_genre">Action</string>

    <string name="base_url_image">https://image.tmdb.org/t/p/w185</string>
    <string name="base_url_image_med_res">https://image.tmdb.org/t/p/w500</string>
    <string name="base_url_image_high_res">https://image.tmdb.org/t/p/w780</string>
</resources>
