<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.detail.DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_detail"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ToolbarHome"/>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/med_margin"
                android:layout_marginTop="@dimen/med_margin"
                android:layout_marginEnd="@dimen/med_margin"
                android:layout_marginBottom="@dimen/med_margin"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/image_arc_detail" />

            <com.github.florent37.shapeofview.shapes.ArcView
                android:id="@+id/image_arc_detail"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:elevation="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shape_arc_cropDirection="outside"
                app:shape_arc_height="30dp"
                app:shape_arc_position="bottom">

                <ImageView
                    android:id="@+id/image_detail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/description_poster"
                    android:scaleType="centerCrop"
                    android:visibility="invisible" />

                <ImageView
                    android:id="@+id/image_dark"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#50000000"
                    android:contentDescription="@string/description_poster"
                    android:visibility="invisible" />

            </com.github.florent37.shapeofview.shapes.ArcView>

            <ImageView
                android:id="@+id/image_poster"
                android:layout_width="150dp"
                android:layout_height="220dp"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/med_margin"
                android:contentDescription="@string/description_poster"
                app:layout_constraintBottom_toBottomOf="@+id/image_arc_detail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_arc_detail"
                tools:srcCompat="@tools:sample/avatars" />

            <me.zhanghai.android.materialratingbar.MaterialRatingBar
                android:id="@+id/rating_bar"
                style="@style/Widget.MaterialRatingBar.RatingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/med_margin"
                android:layout_marginTop="@dimen/small_margin"
                android:layout_marginEnd="@dimen/med_margin"
                android:isIndicator="true"
                android:numStars="5"
                android:progressTint="@color/rating"
                android:rating="2.5"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_rating" />

            <TextView
                android:id="@+id/text_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:textColor="@color/rating"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_poster"
                tools:text="@string/txt_rating" />

            <TextView
                android:id="@+id/text_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_vertical_margin"
                android:layout_marginEnd="16dp"
                android:textColor="@color/textColorBold"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/text_genre"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/image_poster"
                app:layout_constraintTop_toBottomOf="@+id/image_arc_detail"
                tools:text="@string/txt_release" />

            <TextView
                android:id="@+id/text_genre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:textColor="@color/textColorBold"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="@+id/image_poster"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/image_poster"
                app:layout_constraintTop_toBottomOf="@+id/text_date"
                tools:text="@string/txt_genre" />

            <TextView
                android:id="@+id/text_overview_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/med_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:text="@string/txt_overview"
                android:textColor="@color/textColorBold"
                android:textStyle="bold"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@+id/text_overview"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rating_bar" />

            <TextView
                android:id="@+id/text_overview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/med_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:textColor="@color/textColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_overview_title"
                tools:text="@string/lorem" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</LinearLayout>